src/test/deca/syntax/invalid/crochet_manquant_2.deca
// Description:
//    crochet fermant manquant dans le main
//
// Resultats:
//    Erreur de syntaxe
//    ligne 8 : extraneous input '}' expecting {<EOF>, '{', 'class'}

}